# framework.api.bluetooth

./: CMakeLists.txt  bluetooth-gatt-test.manifest  bluetooth-infinite-spp-test-client.manifest  bluetooth-infinite-spp-test-server.manifest
TC/testcase/: tslist  (+17 more)
doc/: bluetooth_doc.h
include/: bluetooth.h  bluetooth_private.h
include/tv/: BTLogger.h  (+8 more)
packaging/: capi-network-bluetooth.spec
src/: bluetooth-adapter.c  bluetooth-audio.c  bluetooth-common.c  bluetooth-device.c  bluetooth-gatt.c  bluetooth-hid.c  bluetooth-pan.c  bluetooth-socket.c
test/: CMakeLists.txt  bt_infinite_spp_test.c  bt_infinite_spp_test_client.service  bt_infinite_spp_test_server.service  bt_unit_test.c  bt_unit_test.h  capi.network.bluetooth.infinite.spp.test.rule  capi.network.bluetooth.test.rule
test/gatt_profile_test_suite/: CMakeLists.txt  bt_unit_test_gatt.c  bt_unit_test_gatt.h  bt_unit_test_gatt_custom_profile_server.c  bt_unit_test_gatt_custom_profile_server.h  bt_unit_test_gatt_hr_profile.c  bt_unit_test_gatt_hr_profile.h  bt_unit_test_gatt_time_profile.h  bt_unit_test_gatt_time_profile_client.c  bt_unit_test_gatt_time_profile_server.c  capi.network.bluetooth.test.gatt.rule
test_scripts/: bt_on_test_while_infinite.service  check_bt_during_infinite_boot.sh  check_bt_during_infinite_boot_by_sdb.sh
tv_src/: bluetooth-adapter.c  bluetooth-audio.c  bluetooth-avrcp.c  bluetooth-common.c  bluetooth-device.c  bluetooth-dut.c  bluetooth-gatt.c  bluetooth-hdp.c  bluetooth-hid.c  bluetooth-opp-client.c  bluetooth-opp-server.c  bluetooth-pan.c  bluetooth-socket.c  bluetooth-sync3d.c
(+51 files in other folders)
